Update PaintLayer::needsPaintPhaseXXX flags when add/remove layer on style change

When addding/removing a layer on style change, we may not
do paint invalidation to update the needsPaintPhaseXXX flags, so
we need to update the flags manually.

In the future, the logic can be simplified by updating the flags
during pre-painting tree walk.

BUG=598978

Review URL: https://codereview.chromium.org/1862313002

Cr-Commit-Position: refs/heads/master@{#386264}

Former-commit-id: eb3bc319810c236e1a030d0f0c04867e1cdb8862